# amelis-decrypt

./: .env.example  .gitignore  README.md  pyproject.toml
src/: amelis-smime-decrypt.py  amelis_smime_decrypt.py
